tests/fixtures/syntax/valid/write_step_fence_length_for_embedded_backticks.repor
case "write step fence length for embedded backticks" {
  write <"expected/markdown.md"> ````
    ```ts
    console.log("hello")
    ```
    ````
  $ true
  assert {
    exit 0
  }
}
